--- a/muhaha.ipynb
+++ b/muhaha.ipynb
@@ -18,11 +18,7 @@
       "metadata": {
         "id": "_SCRIJrmaHJv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "a678c54c-5fc7-47f3-fedc-5892888fbbbd"
+        "colab": {}
       },
       "source": [
         "!pip install sobol_seq\n",
@@ -62,16 +58,8 @@
         "    else:\n",
         "        print(say)"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: sobol_seq in /usr/local/lib/python3.6/dist-packages (0.1.2)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -81,9 +69,7 @@
         "colab": {}
       },
       "source": [
-        "#######           \n",
-        "#STARS#\n",
-        "#######\n",
+        "#STARS\n",
         "\n",
         "def pmeas(a,b,c): #theory measure\n",
         "    return 1/b/c\n",
@@ -138,9 +124,7 @@
         "colab": {}
       },
       "source": [
-        "################################\n",
-        "#FRACTION OF STARS WITH PLANETS#\n",
-        "################################\n",
+        "#FRACTION OF STARS WITH PLANETS\n",
         "\n",
         "Z_inf=.011\n",
         "def Z_min(l,a,b,c): #minimum metallicity for planet formation\n",
@@ -169,9 +153,7 @@
         "colab": {}
       },
       "source": [
-        "#############################\n",
-        "#NUMBER OF HABITABLE PLANETS#\n",
-        "#############################\n",
+        "#NUMBER OF HABITABLE PLANETS\n",
         "\n",
         "#ISOLATION MASS\n",
         "qiso=1/3 #slope of planetesimal masses\n",
@@ -179,7 +161,7 @@
         "p_ldep=1 # include stellar mass-planet mass correlation 0: no 1: yes\n",
         "def r_iso(l,a,b,c): #ratio of isolation mass to terrrestrial mass\n",
         "    return .1*(1.8*l)**2*a**-4*b**(-21/8)\n",
-        "def r_inn(l,a,b,c): #ratio of innder disk mass to isolation mass\n",
+        "def r_inn(l,a,b,c): #ratio of inner disk mass to isolation mass\n",
         "    return 30*(1.8*l)**(-1/3)*a**(5/6)*b**(5/8)\n",
         "def fiso(x): #fraction of terrestrial planets\n",
         "    return min(1,(x/.3)**qiso)-min(1,(x/4)**qiso)\n",
@@ -221,9 +203,7 @@
         "colab": {}
       },
       "source": [
-        "######\n",
-        "#LIFE#\n",
-        "######\n",
+        "#LIFE\n",
         "\n",
         "n_hard=1 #number of hard steps\n",
         "def r_time(l,a,b,c): #ratio of stellar to molecular timescale\n",
@@ -260,9 +240,7 @@
         "colab": {}
       },
       "source": [
-        "#######\n",
-        "#DEATH#\n",
-        "#######\n",
+        "#DEATH\n",
         "\n",
         "Myr=1\n",
         "km=1\n",
@@ -330,7 +308,7 @@
         "    return (t*G+10**-6)*(1-t*G)*heaviside(1-t*G)\n",
         "def f_reset(t,ts,G):\n",
         "    return 1-(1-np.exp(-10*t*G))**(ts/(10*t))\n",
-        "def f_int(l,a,b,c): #fraction of \n",
+        "def f_int(l,a,b,c): #fraction of life that develops intelligence\n",
         "    return [1,f_setback(t_rec(l,a,b,c),G_death(l,a,b,c)),\\\n",
         "            f_IDH(t_rec(l,a,b,c),G_death(l,a,b,c)),\\\n",
         "            f_reset(t_rec(l,a,b,c),t_star(l,a,b,c),G_death(l,a,b,c))]"
@@ -346,9 +324,7 @@
         "colab": {}
       },
       "source": [
-        "#####################\n",
-        "#NUMBER OF OBSERVERS#\n",
-        "#####################\n",
+        "#NUMBER OF OBSERVERS\n",
         "\n",
         "def nobs(l,a,b,c,*P_list): #counts number of observers\n",
         "    return pmeas(a,b,c)*Nstars(a,b,c)\\\n",
@@ -458,16 +434,14 @@
       "metadata": {
         "id": "R9jzXqQAbkaR",
         "colab_type": "code",
+        "outputId": "61cb2f0d-67ef-40fb-9e70-d86e9d322f63",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "61cb2f0d-67ef-40fb-9e70-d86e9d322f63"
+        }
       },
       "source": [
-        "#####################################     \n",
-        "#TEST MULTIPLE HYPOTHESES ON RUNNING#\n",
-        "#####################################\n",
+        "#TEST MULTIPLE HYPOTHESES ON RUNNING\n",
         "\n",
         "Ns=10**5 #number of samples. 10**5 is decent, 10**6 is accurate, 10**7 professional\n",
         "\n",
@@ -528,7 +502,7 @@
         "    signs(*P_list)\n",
         "    print(HH(*P_list))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
