--- a/muhaha_demo.ipynb
+++ b/muhaha_demo.ipynb
@@ -42,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:05,  5.62s/it]\n"
+      "1it [00:06,  6.66s/it]\n"
      ]
     },
     {
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:05,  5.74s/it]\n"
+      "1it [00:01,  1.04s/it]\n"
      ]
     },
     {
@@ -230,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:05,  5.50s/it]\n"
+      "1it [00:01,  1.35s/it]\n"
      ]
     },
     {
@@ -324,7 +324,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:16,  5.47s/it]\n"
+      "3it [00:02,  1.15it/s]\n"
      ]
     },
     {
@@ -418,6 +418,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 1419912)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = L5[0]\n",
+    "l,a,b,c,du,dd=tuple(L)    \n",
+    "lo = l_min([1,1,1,1,1,1])/l_min(L)*l\n",
+    "lo\n",
+    "np.array([lo]+[np.ones_like(lo)]*5).shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -430,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -445,7 +469,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6it [00:40,  6.75s/it]\n"
+      "6it [00:07,  1.31s/it]\n"
      ]
     },
     {
@@ -568,7 +592,7 @@
        "yellow  iso temp S C/O      0.364  0.1680  0.000230  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -604,7 +628,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8it [00:47,  5.97s/it]\n"
+      "8it [00:05,  1.51it/s]\n"
      ]
     },
     {
@@ -753,7 +777,7 @@
        "yellow  GI temp area S C/O       0.485      0.241  0.04930  3.888389e-04  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -790,7 +814,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2it [00:10,  5.25s/it]\n"
+      "2it [00:01,  1.01it/s]\n"
      ]
     },
     {
@@ -861,7 +885,7 @@
        " TL C C/O  0.017400  7.342223e-05  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -897,7 +921,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2it [01:13, 36.68s/it]\n"
+      "2it [02:07, 63.91s/it]\n"
      ]
     },
     {
@@ -968,7 +992,7 @@
        "yellow plates S C/O      0.424  0.040  0.000065  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1004,7 +1028,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:10<00:00,  5.31s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 2/2 [00:04<00:00,  2.16s/it]\n"
      ]
     },
     {
@@ -1075,7 +1099,7 @@
        "yellow S C/O  0.1940  0.000478  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1112,7 +1136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:05,  5.19s/it]\n"
+      "1it [00:01,  1.67s/it]\n"
      ]
     },
     {
@@ -1170,7 +1194,7 @@
        " time C/O  1.390000e-12  3.478371e-24  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1192,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1207,7 +1231,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "16it [02:31,  9.50s/it]\n"
+      "16it [01:39,  6.19s/it]\n"
      ]
     },
     {
@@ -1478,7 +1502,7 @@
        "yellow S setback comets grbs glac vol C/O  0.01180  0.000026  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1513,7 +1537,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:13,  4.52s/it]\n"
+      "3it [00:05,  1.76s/it]\n"
      ]
     },
     {
@@ -1605,7 +1629,7 @@
        "yellow S Mg/Si      0.425   0.236       0.135000  0.135000  1.774235e-05  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
